Fix show ad overflowing content.

--- a/src/Adstacy/AppBundle/Resources/public/less/layout/ad.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/layout/ad.less
@@ -103,15 +103,6 @@
   }
 }
 
-@media screen and (max-width: @screen-tablet) {
-  #show-ad, #show-ad-content {
-    width: 100% !important;
-  }
-  #show-ad-owner {
-    display: none;
-  }
-}
-
 @media screen and (max-width: 480px) {
   .ad {
     width: 100%;
